# como-tag-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/como_tag_audit/: __init__.py  __main__.py  audit.py  cli.py  cmp.py  fetcher.py  models.py  parser.py  vendors.py
src/como_tag_audit/reporters/: __init__.py  deck.py  spreadsheet.py
tests/: test_audit.py  test_cli.py  test_cmp.py  test_parser.py  test_reporters.py
tests/fixtures/: sample_gtm.js  sample_page.html
