[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "como-tag-audit"
version = "0.1.0"
description = "Static Google Consent Mode audit for GTM containers. Finds every tag that fires without respecting user consent."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Kenneth Buchanan", email = "kenneth@roseskyconsulting.com" }]
keywords = ["gtm", "google-tag-manager", "consent-mode", "privacy", "gdpr", "cookies", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.scripts]
como-tag-audit = "como_tag_audit.cli:main"

[project.urls]
Homepage = "https://github.com/kb223/como-tag-audit"
Issues = "https://github.com/kb223/como-tag-audit/issues"
"Full Audit" = "https://kennethjbuchanan.com/audit#get-audit"

[tool.hatch.build.targets.wheel]
packages = ["src/como_tag_audit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
